[gd_scene load_steps=7 format=3 uid="uid://wxeq5pbpjm78"]

[ext_resource type="Script" path="res://items/weapon_projectiles/weapon_projectile_missile.gd" id="1_asd6x"]
[ext_resource type="PackedScene" uid="uid://gj55bahvsd7g" path="res://items/weapon_projectiles/explosions/explosion_leadball.tscn" id="2_f5fls"]
[ext_resource type="Texture2D" uid="uid://n0ljl2ukpglf" path="res://items/weapon_projectiles/projectile_ball.png" id="3_q6rmh"]
[ext_resource type="Texture2D" uid="uid://c737fmtapano1" path="res://items/weapon_projectiles/missiles/g14.png" id="3_x8060"]
[ext_resource type="AudioStream" uid="uid://clcb4lxiicjhg" path="res://items/weapon_projectiles/missiles/missile_thruster.wav" id="4_mo65d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ojyh2"]
radius = 4.0
height = 32.0

[node name="WeaponProjectile" type="RigidBody2D" node_paths=PackedStringArray("thrust_sfx")]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_asd6x")
thrust_sfx = NodePath("MissileThruster/Thruster")
explosion_to_spawn = ExtResource("2_f5fls")
min_falloff_distance = 5.0
max_falloff_distance = 45.0
max_damage = 90.0
destructible_scale_multiplier = Vector2(8, 8)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.183745, 0.183745)
texture = ExtResource("3_x8060")

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ojyh2")

[node name="Overlap" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 31

[node name="OverlapCollisionShape" type="CollisionShape2D" parent="Overlap"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ojyh2")

[node name="Destructible" type="CollisionPolygon2D" parent="."]
scale = Vector2(1.07263, 1.07263)
polygon = PackedVector2Array(-5.59373, 1.86458, -5.59373, 0, -4.66144, -2.79687, -2.79687, -4.66144, 0, -5.59373, 2.79687, -4.66144, 4.66144, -2.79687, 5.59373, 0, 4.66144, 2.79687, 2.79687, 4.66144, 0, 5.59373, -2, 5, -4, 4)

[node name="MissileThruster" type="Marker2D" parent="."]
position = Vector2(-18, 0)
gizmo_extents = 120.0

[node name="Thruster" type="AudioStreamPlayer2D" parent="MissileThruster"]
stream = ExtResource("4_mo65d")

[node name="trajectory dots (CPUParticles2D)" type="CPUParticles2D" parent="MissileThruster"]
z_index = 20
amount = 100
lifetime = 5.0
gravity = Vector2(0, 0)
scale_amount_min = 4.0
scale_amount_max = 4.0

[node name="Debug_Target" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_q6rmh")

[node name="Debug_Target2" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.601318, 0.368341, 1)
top_level = true
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_q6rmh")
